--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/jasmine": "2.8.7",
     "@types/jquery": "^3.5.5",
     "@types/node": "7.0.0",
+    "@types/node-sass": "^4.11.2",
     "@types/p5": "^1.4.0",
     "awesome-typescript-loader": "5.2.0",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.9",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.2",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
     "jasmine-core": "3.1.0",
@@ -29,6 +31,7 @@
     "karma-phantomjs-launcher": "1.0.4",
     "karma-webpack": "3.0.0",
     "mini-css-extract-plugin": "^1.3.6",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^5.0.0",
     "sass": "^1.32.7",
@@ -39,6 +42,7 @@
     "tslint-loader": "3.6.0",
     "typescript": "^3.8.3",
     "typings-for-css-modules-loader": "^1.7.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
@@ -54,6 +58,7 @@
     "test": "karma start karma.config.js"
   },
   "dependencies": {
+    "hybrids": "^7.0.5",
     "jquery": "^3.5.1",
     "p5": "^1.4.1"
   }
